# postfixblocker

./: .aiignore  .bandit  .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS.md.old  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  INSTALL.md  LICENSE.md  MANIFEST.in  Makefile  README.md  REFactor_STATUS.md  RELEASE.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TESTING.md  coverage.json  coverage.xml  docker-compose.yml  frontend_test_output.txt  frontend_test_output_branches3.txt  license.json  package-lock.json  package.json  pyproject.toml  pytest.ini  release.json  requirements-base.txt  requirements-db2.txt  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.devcontainer/scripts/: wait-for-port.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
.junie/: guidelines.md
app/: __init__.py  api.py  blocker.py
docker/: install-test.env  supervisord.conf
docker/postfix/: Dockerfile  main.cf  rsyslog-postfix.conf
docker/postfix-blocker-test-install/: Dockerfile  main.cf
frontend/: .eslintrc.cjs  .prettierrc.json   angular.json  eslint.config.cjs  eslint.config.mjs  eslint.e2e.config.cjs  frontend_test_output.txt  global-setup.ts  jest.config.js  karma.conf.js  package-lock.json  package.json  playwright.config.ts  proxy.conf.json  proxy.db2.json  proxy.devcontainer.json  proxy.json  stryker.conf.json  tsconfig.json  tsconfig.spec.json
frontend/.devcontainer/: devcontainer.json
frontend/coverage/: app.component.ts.html  coverage.lcov  index.html
frontend/e2e/: add-list-delete.spec.ts  add_list_delete.spec.ts  global-setup.spec.ts  logs.spec.ts  mode-enforce.spec.ts  mode_enforce.spec.ts
frontend/src/: index.html  main.ts  styles.css  test.ts
frontend/src/app/: app-logic.service.spec.ts  app-logic.service.ts  app.component.auth.spec.ts  app.component.authflows.spec.ts  app.component.authguard.spec.ts  app.component.autoprobe.errors.spec.ts  app.component.autoprobe.spec.ts  app.component.branches.spec.ts  app.component.branches2.spec.ts  app.component.branches3.spec.ts  app.component.branches4.spec.ts  app.component.branches5.spec.ts  app.component.branches6.spec.ts  app.component.branches7.spec.ts  app.component.branches8.spec.ts  app.component.edit-auth.spec.ts  app.component.extra.spec.ts  app.component.finalbranches.spec.ts  app.component.html  app.component.morebranches.spec.ts  app.component.spec.ts  app.component.timers.spec.ts  app.component.ts  app.module.ts  auth.service.spec.ts  auth.service.ts  logger.service.ts  timer.service.ts  webauthn.utility.spec.ts  webauthn.utility.ts
frontend/src/types/: eslint-plugins.d.ts
frontend/test-results/: .last-run.json
frontend/test-results/add_list_delete-add-list-and-delete-entries-db2-chromium/: error-context.md
frontend/test-results/add_list_delete-add-list-and-delete-entries-pg-chromium/: error-context.md
postfix_blocker/: __init__.py  api.py  blocker.py  config.py  logging_setup.py
postfix_blocker/db/: __init__.py  admins.py  engine.py  migrations.py  props.py  schema.py
postfix_blocker/models/: entries.py
postfix_blocker/postfix/: __init__.py  control.py  log_level.py  maps.py
postfix_blocker/services/: blocker_service.py  log_levels.py  log_tail.py
postfix_blocker/web/: __main__.py  app_factory.py  auth.py  routes_addresses.py  routes_auth.py  routes_logs.py  routes_test_reset.py
scripts/: compare_db_state.py  gen_coverage_badge.py  gen_version_badge.py  generate_changelog.py  install.sh  lint-frontend.sh  lint-python.sh  mailtester.sh  precommit-fix.sh  write_badge.py
sql/: db2_init.sql  postgresql_init.sql
tests/: __init__.py  conftest.py  e2e_demo.py  e2e_test.py  test_api_legacy_helpers_unit.py  test_api_logs.py  test_app_factory_integration.py  test_app_factory_unit.py  test_auth_routes_password_unit.py  test_auth_webauthn_challenges_unit.py  test_blocker.py  test_config_unit.py  test_db_admins_fallbacks_unit.py  test_db_admins_unit.py  test_db_backends.py  test_db_engine_cache_unit.py  test_db_engine_unit.py  test_db_migrations_db2_more_unit.py  test_db_migrations_db2_unit.py  test_db_props_unit.py  test_e2e.py  test_install_e2e.py  test_log_level_e2e.py  test_log_levels_unit.py  test_log_tail_unit.py  test_log_tail_unit_extra2.py  test_logging_setup_unit.py  test_logging_setup_unit_edges.py  test_logging_setup_unit_extra.py  test_logs_auth_enforcement_unit.py  test_logs_debug_e2e.py  test_logs_lines_unit.py  test_maps_testmode_unit.py  test_migrations_branches_unit.py  test_migrations_sqlite_unit.py  test_models_entries_unit.py  test_more_web_coverage_unit.py  test_notify_blocker_refresh_unit.py  test_postfix_control_error_branches_unit.py  test_postfix_control_unit.py  (+23 more)
